[project]
name = "blog2vault"
version = "0.1.0"
description = "Substack blog to Obsidian vault sync pipeline"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-slugify>=8.0",
    "html2text>=2024.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
ml = ["scikit-learn>=1.4", "numpy>=1.26"]
all = ["blog2vault[ai,ml]"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
